linter errors fixed

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -43,3 +43,14 @@ Layout/MultilineMethodCallIndentation:
   EnforcedStyle: indented
 Lint/UselessAssignment:
   Enabled: false
+
+  Style/HashEachMethods:
+  Enabled: false
+Style/HashTransformKeys:
+  Enabled: false
+Style/HashTransformValues:
+  Enabled: false
+Lint/RaiseException:
+  Enabled: true
+Lint/StructNewOverride:
+  Enabled: true
