--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,7 +45,7 @@ Lint/UselessAssignment:
   Enabled: false
 
   Style/HashEachMethods:
-  Enabled: true
+  Enabled: false
 Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
