--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -3,8 +3,7 @@ AllCops:
     - "README.md"
     - "Guardfile"
     - "Rakefile"
-    - "Gemfile"
-
+    
   DisplayCopNames: true
 
 Layout/LineLength:
@@ -20,7 +19,6 @@ Metrics/BlockLength:
   Max: 30
 
 
-
 Style/Documentation:
   Enabled: false
 Style/ClassAndModuleChildren:
@@ -34,6 +32,7 @@ Style/DefWithParentheses:
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
 
+
 Layout/HashAlignment:
   EnforcedColonStyle: key
 Layout/ExtraSpacing:
@@ -41,9 +40,10 @@ Layout/ExtraSpacing:
 Layout/MultilineMethodCallIndentation:
   Enabled: true
   EnforcedStyle: indented
-Lint/UselessAssignment:
-  Enabled: false
 
+
+Style/HashEachMethods:
+  Enabled: false
 Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
